--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.0.3"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
