--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
